--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ h6 {
   margin-top: 16px;
 }
 
-@media all and (max-width: 800px) {
+@media all and (min-width: 800px) {
   .container-0, .container-1, .container-2, .container-3, .container-4, .container-5, .container-6 {
       text-align: center;
   }
@@ -204,7 +204,7 @@ h6 {
   margin: 0px auto;
   letter-spacing: auto;
   animation:
-    typing 4.5s steps(40, end),
+    typing 9.5s steps(40, end),
     blink-caret .75s step-end infinite;
 }
 
